src/test/ui/lazy-type-alias-impl-trait/branches.stderr
error[E0277]: a value of type `Foo` cannot be built from an iterator over elements of type `_`
  --> $DIR/branches.rs:9:28
   |
LL |         std::iter::empty().collect()
   |                            ^^^^^^^ value of type `Foo` cannot be built from `std::iter::Iterator<Item=_>`
   |
   = help: the trait `FromIterator<_>` is not implemented for `Foo`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `collect`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
